--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -5,6 +5,11 @@
     </head>
 <body>
     <h1>Voter List Manager</h1>
+    <div id='loadingBlock'>
+	    Loading...
+    </div> <!-- loadingBlock -->
+    <div id='controls'>
+    </div> <!-- controls -->
 
    <footer>
         <div class='center copyright'>Copyright Kent Archie <span>year</span></div>
