added logo, adding status fields

--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -5,10 +5,41 @@
     </head>
 <body>
     <h1>Voter List Manager</h1>
+    <hr />
+
     <div id='loadingBlock'>
 	    Loading...
     </div> <!-- loadingBlock -->
+
     <div id='controls'>
+	    <div class='status'>
+			<div class='statusElement'>
+				<span class='label'>CSV File Name</span>
+				<span class='statusValue' id='csvFileName'></span>
+			</div>
+			<div class='statusElement'>
+				<span class='label'>CSV File Date</span>
+		    	<span class='statusValue' id='csvFileDate'></span>
+			</div>
+			<div class='statusElement'>
+				<span class='label'>Number Of Records</span>
+				<span class='statusValue' id='numberOfRecords'></span>
+			</div>
+			<div class='statusElement'>
+				<span class='label'>Name</span>
+		    	<span class='statusValue' id='numberOfFields'></span>
+			</div>
+			<div class='statusElement'>
+				<span class='label'>DB Status</span>
+		    	<span class='statusValue' id='dbStatus'></span>
+			</div>
+			<div class='statusElement'>
+				<span class='label'>DB Datee</span>
+		    	<span class='statusValue' id='dbDate'></span>
+			</div>
+	    </div>
+	    <div class='mainBody'>
+	    </div>
     </div> <!-- controls -->
 
    <footer>
