worked on  status fields

--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -15,27 +15,27 @@
 	    <div class='status'>
 			<div class='statusElement'>
 				<span class='label'>CSV File Name</span>
-				<span class='statusValue' id='csvFileName'></span>
+				<span class='statusValue' id='csvFileName'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
 				<span class='label'>CSV File Date</span>
-		    	<span class='statusValue' id='csvFileDate'></span>
+		    	<span class='statusValue' id='csvFileDate'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
 				<span class='label'>Number Of Records</span>
-				<span class='statusValue' id='numberOfRecords'></span>
+				<span class='statusValue' id='numberOfRecords'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
-				<span class='label'>Name</span>
-		    	<span class='statusValue' id='numberOfFields'></span>
+				<span class='label'>Number Of Fields</span>
+		    	<span class='statusValue' id='numberOfFields'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
 				<span class='label'>DB Status</span>
-		    	<span class='statusValue' id='dbStatus'></span>
+		    	<span class='statusValue' id='dbStatus'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
-				<span class='label'>DB Datee</span>
-		    	<span class='statusValue' id='dbDate'></span>
+				<span class='label'>DB Date</span>
+		    	<span class='statusValue' id='dbDate'>&nbsp;</span>
 			</div>
 	    </div>
 	    <div class='mainBody'>
