added csvfile date, some code changes

--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class='statusElement'>
 				<span class='label' title='last modified date ofthe source file'>CSV File Date</span>
-		    	<span class='statusValue' id='csvFileDate' title='last modified date ofthe source file'>&nbsp;</span>
+		    <span class='statusValue' id='csvFileDate' title='Last modified date of the source file'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
 				<span class='label' title='Number of voter records'>Number Of Records</span>
@@ -27,17 +27,18 @@
 			</div>
 			<div class='statusElement'>
 				<span class='label' title='Number of fields per record'>Number Of Fields</span>
-		    	<span class='statusValue' id='numberOfFields' title='Number of fields per record'>&nbsp;</span>
+		    <span class='statusValue' id='numberOfFields' title='Number of fields per record'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
 				<span class='label' title='Status of the voter record database'>DB Status</span>
-		    	<span class='statusValue' id='dbStatus' title='Status of the voter record database'>&nbsp;</span>
+		    <span class='statusValue' id='dbStatus' title='Status of the voter record database'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
 				<span class='label' title='Voter record database creation date'>DB Date</span>
-		    	<span class='statusValue' id='dbDate title='Voter record database creation date''>&nbsp;</span>
+		    <span class='statusValue' id='dbDate title='Voter record database creation date''>&nbsp;</span>
 			</div>
-	    </div>
+			</div> <!-- status block -->-->
+
 	    <div class='mainBody'>
 	    </div>
     </div> <!-- controls -->
