added titles to status fields and started DB

--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -14,28 +14,28 @@
     <div id='controls'>
 	    <div class='status'>
 			<div class='statusElement'>
-				<span class='label'>CSV File Name</span>
-				<span class='statusValue' id='csvFileName'>&nbsp;</span>
+				<span class='label' title='Name of the voter list source file'>CSV File Name</span>
+				<span class='statusValue' id='csvFileName' title='Name of the voter list source file'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
-				<span class='label'>CSV File Date</span>
-		    	<span class='statusValue' id='csvFileDate'>&nbsp;</span>
+				<span class='label' title='last modified date ofthe source file'>CSV File Date</span>
+		    	<span class='statusValue' id='csvFileDate' title='last modified date ofthe source file'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
-				<span class='label'>Number Of Records</span>
-				<span class='statusValue' id='numberOfRecords'>&nbsp;</span>
+				<span class='label' title='Number of voter records'>Number Of Records</span>
+				<span class='statusValue' id='numberOfRecords' title='Number of voter records'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
-				<span class='label'>Number Of Fields</span>
-		    	<span class='statusValue' id='numberOfFields'>&nbsp;</span>
+				<span class='label' title='Number of fields per record'>Number Of Fields</span>
+		    	<span class='statusValue' id='numberOfFields' title='Number of fields per record'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
-				<span class='label'>DB Status</span>
-		    	<span class='statusValue' id='dbStatus'>&nbsp;</span>
+				<span class='label' title='Status of the voter record database'>DB Status</span>
+		    	<span class='statusValue' id='dbStatus' title='Status of the voter record database'>&nbsp;</span>
 			</div>
 			<div class='statusElement'>
-				<span class='label'>DB Date</span>
-		    	<span class='statusValue' id='dbDate'>&nbsp;</span>
+				<span class='label' title='Voter record database creation date'>DB Date</span>
+		    	<span class='statusValue' id='dbDate title='Voter record database creation date''>&nbsp;</span>
 			</div>
 	    </div>
 	    <div class='mainBody'>
