added user settings and some small changes

--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -37,7 +37,7 @@
 				<span class='label' title='Voter record database creation date'>DB Date</span>
 		    <span class='statusValue' id='dbDate title='Voter record database creation date''>&nbsp;</span>
 			</div>
-			</div> <!-- status block -->-->
+			</div> <!-- status block -->
 
 	    <div class='mainBody'>
 	    </div>
