--- a/electron/clientApp/about.html
+++ b/electron/clientApp/about.html
@@ -7,9 +7,9 @@
                 margin-right: auto;
                 width: 50%
             }
-				h2 {
-					font-style : italic;
-				}
+			h2 {
+				font-style : italic;
+			}
             ul {
                 list-style-type: none;
             }
@@ -18,7 +18,9 @@
 <body>
     <h1> Voter List Manager</h1>
     <h2>Source Code:</h2>
-        <a href = 'https://github.com/kentarchie/photo-collection-manager'>https://github.com/kentarchie/cross-platform-coding-talk</a>
+        <a href = 'https://github.com/kentarchie/photo-collection-manager'>
+            https://github.com/kentarchie/cross-platform-coding-talk
+        </a>
     <h2>Versions:</h2>
     <ul>
         <li>Node:      <script>document.write(process.versions.node)</script></li>
