added different settings management

--- a/electron/clientApp/about.html
+++ b/electron/clientApp/about.html
@@ -21,7 +21,7 @@
         <a href = 'https://github.com/kentarchie/photo-collection-manager'>
             https://github.com/kentarchie/cross-platform-coding-talk
         </a>
-    <h2>Versions:</h2>
+    <h2>Built With Versions:</h2>
     <ul>
         <li>Node:      <script>document.write(process.versions.node)</script></li>
         <li>Chrome:    <script>document.write(process.versions.chrome)</script></li>
