initial data cleanup functions, connection and insertion in NeDB and simple query

--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -17,7 +17,7 @@
 	 <div class='mainBody'>
 		 <ul id="tabs">
 			 <li><a id="tab1">DB Management</a></li>
-			 <li><a id="tab2">Tab 2</a></li>
+			 <li><a id="tab2">Queries</a></li>
 			 <li><a id="tab3">Tab 3</a></li>
 			 <li><a id="tab4">Tab 4</a></li>
 		 </ul>
@@ -52,7 +52,10 @@
 			 </div> <!-- db management -->
 
           <div class="tabBlock" id="tab2C">
-			 	Tab 2 content
+			 	<h2>Queries</h2>
+				<button type='button' id='runAgeQuery' name='runAgeQuery'>Run Age Query</button>
+				<div id='queryResults'>
+				</div>
 			 </div> <!-- tab2 -->
 
           <div class="tabBlock" id="tab3C">
