basic walk list working

--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -73,7 +73,10 @@
 
 					<section>
 						<button type='button' id='selectWalkListDir' name='selectWalkListDir'> Select Directory for Walk Lists</button>
-						<div id='walkListDir'></div>
+						<div id='walkListDir'>
+							<ul>
+							</ul>
+						</div>
 
 						<label for='walkListName'>Walk List Name</label>
 						<input type='text' id='walkListName' name='walkListName' />
