added shared JS directory, ThirdParty directories

--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -100,7 +100,7 @@
    <!-- Insert this line above script imports  -->
    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 
-   <script type='text/javascript' src='js/ThirdParty/jquery.js'></script>
+   <script type='text/javascript' src='../sharedJS/jquery.js'></script>
    <script type='text/javascript' src='js/voter-manager.js'></script>
 
    <!-- Insert this line after script imports -->
