switched to table for walk list

--- a/electron/clientApp/index.html
+++ b/electron/clientApp/index.html
@@ -73,16 +73,25 @@
 
 					<section>
 						<button type='button' id='selectWalkListDir' name='selectWalkListDir'> Select Directory for Walk Lists</button>
+						<div class='walkListDir'>
+						<table>
+                      <thead>
+                      </thead>
+                      <tbody id='walkListBody'>
+                      </tbody>
+                  </table>
+                  <!--
 						<div id='walkListDir'>
-							<ul>
-							</ul>
+                     <div id='addressesLeft' class="address"></div>
+                     <div id='namesRight' class="names"></div>
 						</div>
+                  -->
 
 						<label for='walkListName'>Walk List Name</label>
 						<input type='text' id='walkListName' name='walkListName' />
 					</section>
 				</form>
-			 </div> <!-- tab3 WalkLIsts-->
+			 </div> <!-- tab3 WalkLists-->
 
           <div class="tabBlock" id="tab4C">
 			 	Tab 4 content
